--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 :root {
-  --gray: #a2a0a0;
-  --darkerGray: #474747;
-  --green: #00754b;
+  --gray: #a2a0a0bb;
+  --darkerGray: #7e7c7c;
+  --green: #00754ac6;
   --lighterGreen: #00c896;
 }
 
