--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -3,4 +3,49 @@
   padding: 1rem;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 100px;
+  min-height: 500px;
+}
+
+.carousel {
+  border: 2px solid black;
+  display: grid;
+  grid-template-columns: 50px 1fr 50px;
+  grid-template-rows: 1fr 50px;
+}
+
+.card {
+  border: 2px solid yellow;
+}
+
+.imageContainer {
+  border: 1px solid orange;
+  position: relative;
+}
+
+.imageContainer > .backGround {
+  border: 3px solid pink;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: 1;
+  opacity: 0.5;
+  filter: blur(2px);
+}
+
+.imageContainer > img {
+  width: 500px;
+  height: 300px;
+  object-fit: contain;
+  position: relative; /* Add stacking contest */
+  z-index: 2;
+}
+
+.pagination {
+  border: 1px solid red;
+  grid-column: 1 / 4;
 }
