--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -24,9 +24,8 @@
 }
 
 .navContainer > a {
-  font-weight: bold;
   text-decoration: none;
-  color: var(--lighterGreen);
+  color: var(--darkerGreen);
   padding: 0.6rem 1.2rem;
   border-radius: 5px;
   background-color: var(--darkerGray);
