--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,12 +1,31 @@
 .main {
   background-color: var(--green);
-  padding: 1rem;
+  padding: 5rem 0rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 100px;
+  gap: 50px;
   min-height: 500px;
+}
+
+.headerContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  text-align: center;
+  padding: 2rem;
+  background-color: var(--darkerGreen);
+}
+
+.headerContainer > h2 {
+  font-family: "Merriweather", Times, serif;
+  font-size: 2rem;
+}
+
+.headerContainer > p {
+  font-size: 1.3rem;
 }
 
 .carousel {
@@ -14,19 +33,42 @@
   display: grid;
   grid-template-columns: 50px 1fr 50px;
   grid-template-rows: 1fr 50px;
+  margin: 0 200px;
+}
+
+.carousel > button {
+  font-size: 2rem;
+  font-weight: bold;
+  border: none;
+  background-color: #ccc7c7;
+  cursor: pointer;
+}
+
+.carousel > button > img {
+  width: 32px;
+}
+
+.carousel > button:hover {
+  background-color: #bebdbd;
+}
+
+.carousel > button:active {
+  background-color: #a19f9f;
 }
 
 .card {
-  border: 2px solid yellow;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .imageContainer {
-  border: 1px solid orange;
   position: relative;
+  width: 100%;
 }
 
 .imageContainer > .backGround {
-  border: 3px solid pink;
   position: absolute;
   width: 100%;
   height: 100%;
@@ -38,11 +80,32 @@
 }
 
 .imageContainer > img {
-  width: 500px;
+  width: 100%;
   height: 300px;
   object-fit: contain;
   position: relative; /* Add stacking contest */
   z-index: 2;
+}
+
+.descriptionContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  padding: 0.5rem;
+  background-color: var(--gray);
+}
+
+.descriptionContainer > h3 {
+  font-size: 2rem;
+  font-family: "Merriweather", Times, serif;
+}
+
+.descriptionContainer > div {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  line-height: 1.3;
 }
 
 .pagination {
