--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,6 +1,6 @@
 .main {
   background-color: var(--green);
-  padding: 5rem 0rem;
+  padding: 4rem 0rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -29,31 +29,17 @@
 }
 
 .carousel {
-  border: 2px solid black;
   display: grid;
   grid-template-columns: 50px 1fr 50px;
-  grid-template-rows: 1fr 50px;
-  margin: 0 200px;
+  grid-template-rows: 1fr 40px;
+  padding: 0;
+  box-shadow: 2.8px 2.8px 2.2px rgba(0, 0, 0, 0.02), 6.7px 6.7px 5.3px rgba(0, 0, 0, 0.028),
+    12.5px 12.5px 10px rgba(0, 0, 0, 0.035), 22.3px 22.3px 17.9px rgba(0, 0, 0, 0.042),
+    41.8px 41.8px 33.4px rgba(0, 0, 0, 0.05), 100px 100px 80px rgba(0, 0, 0, 0.07);
 }
 
-.carousel > button {
-  font-size: 2rem;
-  font-weight: bold;
-  border: none;
-  background-color: #ccc7c7;
-  cursor: pointer;
-}
-
-.carousel > button > img {
-  width: 32px;
-}
-
-.carousel > button:hover {
-  background-color: #bebdbd;
-}
-
-.carousel > button:active {
-  background-color: #a19f9f;
+.carousel:hover {
+  outline: 5px double var(--darkerGray);
 }
 
 .card {
@@ -61,6 +47,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  height: 100%;
 }
 
 .imageContainer {
@@ -74,6 +61,7 @@
   height: 100%;
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
   z-index: 1;
   opacity: 0.5;
   filter: blur(2px);
@@ -85,6 +73,7 @@
   object-fit: contain;
   position: relative; /* Add stacking contest */
   z-index: 2;
+  filter: drop-shadow(2.8px 2.8px 10px rgba(0, 0, 0, 0.775));
 }
 
 .descriptionContainer {
@@ -94,6 +83,8 @@
   gap: 10px;
   padding: 0.5rem;
   background-color: var(--gray);
+  width: 100%;
+  min-height: 258px;
 }
 
 .descriptionContainer > h3 {
@@ -104,11 +95,16 @@
 .descriptionContainer > div {
   display: flex;
   flex-direction: column;
-  gap: 5px;
+  gap: 7px;
   line-height: 1.3;
+  max-height: 200px;
+  overflow-y: auto;
 }
 
-.pagination {
-  border: 1px solid red;
-  grid-column: 1 / 4;
+.shopContainer {
+  background-color: var(--darkerGray);
+}
+
+.shopNowButton {
+  background-color: green;
 }
