--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -3,8 +3,6 @@
   padding: 4rem 0rem;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   gap: 50px;
   min-height: 500px;
 }
@@ -81,7 +79,7 @@
   flex-direction: column;
   align-items: center;
   gap: 10px;
-  padding: 0.5rem;
+  padding: 0.7rem;
   background-color: var(--gray);
   width: 100%;
   min-height: 258px;
@@ -102,9 +100,41 @@
 }
 
 .shopContainer {
-  background-color: var(--darkerGray);
+  background-color: #a7e4cea8;
+  display: flex;
+  padding: 3rem 2rem;
+  justify-content: center;
+  align-items: center;
 }
 
 .shopNowButton {
-  background-color: green;
+  background: linear-gradient(270deg, #00c896, #7e7c7c);
+  background-size: 400% 400%;
+  border: none;
+  border-radius: 3px;
+  padding: 1rem 2rem;
+  font-family: "Merriweather", Times, serif;
+  font-size: 1.8rem;
+  cursor: pointer;
+  animation: AnimationName 18s ease infinite;
+}
+
+.shopNowButton:hover {
+  filter: brightness(0.8);
+}
+
+.shopNowButton:active {
+  filter: brightness(1.1);
+}
+
+@keyframes AnimationName {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
