--- a/src/components/LoadingSpinner/LoadingSpinner.module.css
+++ b/src/components/LoadingSpinner/LoadingSpinner.module.css
@@ -1,6 +1,6 @@
 .container {
   background-color: var(--green);
-  height: 100vh;
+  min-height: 90vh;
   display: flex;
   justify-content: center;
   padding: 7rem;
