--- a/src/components/Category/Category.module.css
+++ b/src/components/Category/Category.module.css
@@ -49,9 +49,40 @@
   object-fit: contain;
 }
 
-.card > h3 {
+.textContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem 0;
+  gap: 10px;
+}
+
+.textContainer > h3 {
   font-size: 1.3rem;
   font-weight: 500;
-  padding: 1rem 0;
   text-shadow: 0 0 2px rgba(0, 0, 0, 0.775);
+  min-height: 45px;
+}
+
+.textContainer > div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  padding: 0.2rem 1rem;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.775);
+  border-radius: 5px;
+}
+
+.textContainer button {
+  background: var(--darkerGray);
+  border: none;
+  border-radius: 5px;
+  padding: 0.4rem 0.8rem;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.textContainer button:hover {
+  filter: brightness(1.2);
 }
