--- a/src/components/Category/Category.module.css
+++ b/src/components/Category/Category.module.css
@@ -6,6 +6,8 @@
   max-height: calc(100vh - 88px);
   overflow-y: scroll;
   scrollbar-color: var(--primary) var(--gray);
+  position: relative;
+  z-index: 0;
 }
 
 .card {
