--- a/src/pages/ShopPage/ShopPage.module.css
+++ b/src/pages/ShopPage/ShopPage.module.css
@@ -2,6 +2,8 @@
   background-color: var(--green);
   display: grid;
   grid-template-columns: 1fr 6fr;
+  position: relative;
+  overflow: hidden;
 }
 
 .aside {
@@ -47,4 +49,35 @@
 
 .navigation a:hover {
   filter: brightness(1.1);
+}
+
+.viewCart {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.8rem 0.5rem;
+  margin-bottom: 50px;
+  background-color: var(--darkerGray);
+  cursor: pointer;
+  border: 5px outset white;
+}
+
+.viewCart:hover {
+  filter: brightness(1.1);
+}
+
+.viewCart:active {
+  filter: brightness(0.9);
+  border: 3px solid white;
+}
+
+.viewCart > h2 {
+  font-size: 1.1rem;
+  font-weight: 600;
+}
+
+.count {
+  background-color: white;
+  border-radius: 100%;
+  padding: 2px 5px;
 }
