--- a/src/components/CartComponent/CartComponent.module.css
+++ b/src/components/CartComponent/CartComponent.module.css
@@ -1,6 +1,6 @@
 .cart {
   position: absolute;
-  background-color: var(--gray);
+  background-color: #f0f0f0d8;
   top: 0;
   right: 0;
   left: 0;
@@ -17,17 +17,40 @@
   transform: translateX(0);
 }
 
-.cart > button {
+.closeButton {
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 20px;
+  left: 20px;
+  background-color: var(--primary);
+  border: none;
+  border-radius: 5px;
+  font-size: 1.8rem;
+  font-weight: bold;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+}
+
+.closeButton:hover {
+  filter: brightness(1.2);
+}
+
+.closeButton:active {
+  filter: brightness(0.9);
 }
 
 .container {
   display: flex;
   flex-direction: column;
-  align-items: stretch;
+  align-items: center;
+  justify-content: center;
   gap: 20px;
+  margin: 0 250px;
+  min-height: 100%;
+}
+
+.empty {
+  font-family: "Merriweather", Times, serif;
+  font-size: 3rem;
 }
 
 .card {
@@ -36,6 +59,7 @@
   display: flex;
   margin: 0 200px;
   background-color: var(--gray);
+  width: 100%;
 }
 
 .imageContainer {
@@ -54,6 +78,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: start;
+  width: 100%;
 }
 
 .textContainer > h3 {
@@ -64,5 +89,42 @@
   display: flex;
   align-items: center;
   gap: 20px;
-  border: 2px solid black;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.775);
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+}
+
+.cartInfoContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 90%;
+}
+
+.remove {
+  background-color: #c00000;
+  border: none;
+  border-radius: 5px;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.remove:hover {
+  filter: brightness(1.1);
+}
+
+.remove:active {
+  filter: brightness(0.9);
+}
+
+.checkout {
+  font-size: 1.5rem;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 5px;
+  background: linear-gradient(270deg, #00c896, #7e7c7c);
+  background-size: 400% 400%;
+  font-weight: 600;
+  margin-top: 25px;
 }
