--- a/src/components/CartComponent/CartComponent.module.css
+++ b/src/components/CartComponent/CartComponent.module.css
@@ -20,7 +20,7 @@
 .closeButton {
   position: absolute;
   top: 20px;
-  left: 20px;
+  right: 20px;
   background-color: var(--primary);
   border: none;
   border-radius: 5px;
@@ -119,7 +119,7 @@
 }
 
 .checkout {
-  font-size: 1.5rem;
+  font-size: 1.7rem;
   padding: 0.5rem 1rem;
   border: none;
   border-radius: 5px;
@@ -127,4 +127,18 @@
   background-size: 400% 400%;
   font-weight: 600;
   margin-top: 25px;
+  cursor: pointer;
+}
+
+.checkout:hover {
+  filter: brightness(1.1);
+}
+
+.checkout:active {
+  filter: brightness(0.9);
+}
+
+.total {
+  font-size: 1rem;
+  color: var(--gray);
 }
