--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -21,6 +21,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
   gap: 80px;
 }
 
@@ -44,4 +45,23 @@
 
 .navContainer > a:hover {
   filter: brightness(1.1);
+}
+
+@media (max-width: 710px) {
+  :root {
+    font-size: 11px;
+  }
+
+  .header {
+    gap: 20px;
+  }
+
+  .header > h1 {
+    font-size: 2rem;
+  }
+
+  .navContainer {
+    justify-content: initial;
+    gap: 5px;
+  }
 }
