--- a/src/pages/ShopPage/ShopPage.module.css
+++ b/src/pages/ShopPage/ShopPage.module.css
@@ -8,7 +8,6 @@
 
 .aside {
   background-color: var(--gray);
-  border-radius: 5px;
   max-height: calc(100vh - 85px);
   overflow-y: auto;
   padding: 1.5rem 0;
@@ -94,4 +93,92 @@
   justify-content: center;
   align-items: center;
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.775);
+}
+
+.viewAsideButton {
+  display: none;
+}
+
+@media (max-width: 700px) {
+  .main {
+    grid-template-columns: 1fr;
+  }
+
+  .aside {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    z-index: 1;
+    max-height: initial;
+    opacity: 0;
+    clip-path: circle(0% at 90% 91%);
+    transition: clip-path 1200ms ease, opacity 1500ms ease;
+  }
+
+  .aside.isOpen {
+    opacity: 1;
+    clip-path: circle(100%);
+  }
+
+  .viewAsideButton {
+    display: block;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 2;
+    width: 35px;
+    cursor: pointer;
+    appearance: none;
+    background: var(--gray);
+    outline: none;
+    border: none;
+    border-radius: 5px;
+  }
+
+  .viewAsideButton .bar,
+  .viewAsideButton::after,
+  .viewAsideButton::before {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 4px;
+    background-color: var(--darkerGray);
+    margin: 4px 0;
+    transition: all 300ms ease;
+  }
+
+  .viewAsideButton.isActive::before {
+    transform: rotate(-45deg) translate(-5px, 5px);
+  }
+
+  .viewAsideButton.isActive::after {
+    transform: rotate(45deg) translate(-6px, -6px);
+  }
+
+  .viewAsideButton.isActive .bar {
+    opacity: 0;
+  }
+
+  .viewCart {
+    margin-bottom: 30px;
+  }
+
+  .viewCart > h2 {
+    font-size: 1.5rem;
+  }
+
+  .count {
+    font-size: 1.5rem;
+    padding: 2px 5px;
+  }
+
+  .aside > h2 {
+    font-size: 1.6rem;
+  }
+
+  .navigation {
+    font-size: 1.4rem;
+  }
 }
